the_project/usr/scr/app/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-port-svc
spec:
  type: NodePort
  selector:
    app: server-port
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
